--- a/src/Styles/s_menu.css
+++ b/src/Styles/s_menu.css
@@ -39,8 +39,8 @@ body{
 
 .card{
     
-    width: 400px; /*ancho*/
-    height: 400px; /*alto*/
+    width: 300px; /*ancho*/
+    height: 350px; /*alto*/
 
     border-radius: 10px;
 
@@ -74,7 +74,7 @@ body{
 .titulo
 {
     letter-spacing: .2px;
-    padding-left: 20px;
+    padding-left: 15px;
     padding-top: 0px;
     padding-bottom: 5px;
     font-size: 24px;
@@ -83,8 +83,13 @@ body{
 }
 .descripcion{
     padding-left: 20px;
-    padding-bottom: 5px;
-    font-size: 18px;
+    padding-bottom: 0px;
+    padding-top: 0%;
+    margin-top: 0;
+    margin-bottom: 0px;
+
+    
+    font-size: 16px;
     font-family: "Roboto";
     color: rgb(49, 49, 49);
 }
@@ -100,4 +105,10 @@ body{
     top: 0;
     display: flex;
     justify-content: center;   
+}
+
+.clic
+{
+    border-color: brown;
+   
 }
