--- a/src/Styles/s_index.css
+++ b/src/Styles/s_index.css
@@ -80,55 +80,57 @@ header .foto .nombre img:hover{
 
 .main .acceder{
     padding: 60px 0;
- }
- 
- .main .acceder .titulo{
-     font-size: 34px;
-     line-height: 34px;
-     margin-bottom: 40px;
-     font-weight: 300;
-     color:#cd1f32;
-     text-align: center;
- }
- 
- .main .acceder .formulario {
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: space-between;
- }
- 
- .main .acceder .formulario input[type="text"],
- .main .acceder .formulario input[type="password"],
- .main .acceder .formulario textarea{
-     border: 2px solid #cecece;
-     border-radius: 5px;
-     padding: 20px;
-     font-size: 20px;
-     color: #a4a4a4;
- }
- .main .acceder .formulario input[type="text"]:focus,
- .main .acceder .formulario input[type="password"]:focus,
- .main .acceder .formulario textarea:focus{
-     border: 2px solid #cd1f32;
- }
- 
- .main .acceder .formulario input[type="text"],
- .main .acceder .formulario input[type="password"]{
-     width: 49%;
-     margin-bottom: 15px;
- }
- 
- .main .acceder .formulario .boton {
-     font-size: 20px;
-     margin: auto;
-     background: #cd1f32;
-     color: #fff;
-     border: none;
-     border-radius: 3px;
-     padding: 15px 40px;
-     cursor: pointer;
- }
- 
- .main .acceder .formulario .boton:hover {
-     background: #f0233a;
- }
+}
+
+.main .acceder .titulo{
+    font-size: 34px;
+    line-height: 34px;
+    margin-bottom: 40px;
+    font-weight: 300;
+    color:#cd1f32;
+    text-align: center;
+}
+
+.main .acceder .formulario {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.main .acceder .formulario input[type="text"],
+.main .acceder .formulario input[type="password"],
+.main .acceder .formulario textarea{
+    border: 2px solid #cecece;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 20px;
+    color: #a4a4a4;
+}
+.main .acceder .formulario input[type="text"]:focus,
+.main .acceder .formulario input[type="password"]:focus,
+.main .acceder .formulario textarea:focus{
+border: 2px solid #cd1f32;
+}
+
+.main .acceder .formulario input[type="text"],
+.main .acceder .formulario input[type="password"]
+{
+    width: 49%;
+    margin-bottom: 15px;
+}
+
+.main .acceder .formulario .boton {
+    font-size: 20px;
+    margin: auto;
+    background: #cd1f32;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    padding: 15px 40px;
+    cursor: pointer;
+}
+
+.main .acceder .formulario .boton:hover
+{
+    background: #f0233a;
+}
