--- a/src/Styles/Materia/materia.css
+++ b/src/Styles/Materia/materia.css
@@ -53,24 +53,31 @@ body{
 
 .contenido
 {
-    margin-top: 40px;
+    margin-top: 0px;
     width: 100%;
-    height:400px;
+    height:500px;
     border-right: 20px;
     color: #000000;
     border: 1px solid #1f1c1c;
+    
+    background-color: #5f5f5f;
 }
 
 .contenido > h1
 {
-    margin-left: 20px;
+    font-size: 35px;
+
+    margin-left: 60px;
     margin-top: 40px;
-    
+    margin-bottom: 0px;
+
+    padding-bottom: 0px;
+
     border-right: 20px;
     border-top: 20px;
 
     border: 1px solid #000000;
-    width:  550px;
+    width:  600px;
     height: 40px;
 }
 
@@ -78,8 +85,8 @@ body{
 {
     font-size: 18px;
     
-    margin-left: 20px;
-    margin-top: 25px;
+    margin-left: 60px;
+    margin-top: 10px;
     
     border-right: 20px;
     border-top: 20px;
@@ -92,9 +99,9 @@ body{
 
 .univalle
 {
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
 
-    position: absolute;
+    /*position: absolute;*
     width: 100%;
     height:250px;
     left: 0px;
@@ -125,6 +132,8 @@ body{
     height: 20px;
     
 }
+
+
 .univalle > h3
 {
     font-size: 14px;
@@ -137,4 +146,9 @@ body{
     
 }
 
+.contenido-materia{
+
+    display: flex;
+    justify-content: center;
+}
 
