--- a/src/Styles/Menu/card-enlace.css
+++ b/src/Styles/Menu/card-enlace.css
@@ -1,14 +1,20 @@
+
 .contenedor-enlaces
 {
     margin-top:0%;
+    margin: 0px;
+
     padding-top: 0%;
+    padding-left: 15px;
     
     width: 100%;
     height:250px;
-    background: #dfdfdf;
+    
+    background: #ffffff;
     
     display: flex;
-    justify-content: center;   
+    justify-content: left;   
+    
 }
 
 
@@ -16,15 +22,17 @@
 {
     margin-top: 50px;
     margin-left: 50px;
+
     background-color: rgb(228, 4, 4);
 
-    height:150px;
+    height:140px;
     width: 250px;
 
     border-radius: 10px;
 
     display: flex;
     justify-content: center; 
+    /*border: 1px solid #000000;*/
 }
 
 .card-title
@@ -51,11 +59,13 @@
     margin-left: 10px;
     height: 50px;
     width: 50px;
-
-    background-color: #f1f1f1;
-    border: 1px solid #1f1c1c;
+    
 
     border-radius: 10px;
+
+    /*border: 1px solid #1f1c1c;*/
 }
+
+
 
 
