--- a/src/Styles/Menu/card-materias.css
+++ b/src/Styles/Menu/card-materias.css
@@ -1,27 +1,31 @@
 .conetenedor-materias
 {
-    background-color: #d6d6d6;
-    height: 600px;
+    background-color: #f1f1f1;
+    height: 450px;
     width:100%;
 
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 0px;
+
+    margin-bottom: 20px;
     display: flex;
-    justify-content: center;   
+    justify-content: left;   
 }
 
 .card{
     
     width: 300px; /*ancho*/
-    height: 350px; /*alto*/
+    height: 400px; /*alto*/
 
     border-radius: 10px;
 
-    margin-left: 20px;
+    margin-left: 60px;
     margin-top: 0px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     margin-right: 20px;
-    background-color: rgb(255, 255, 255);
-    /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);*/
+
+    background-color: rgb(31, 31, 31);
+    box-shadow: 0 4px 8px 0 rgba(88, 88, 88, 0.2), 0 6px 20px 0 rgba(82, 82, 82, 0.19);
 
     border-width:0.05px;
 	border-style:solid;
@@ -42,18 +46,18 @@
     border-radius: 10px  10px 0px 0px;
 }
 
-.titulo
+.titulo-card
 {
-    letter-spacing: .2px;
-    padding-left: 15px;
+    padding-left: 30px;
     padding-top: 0px;
-    padding-bottom: 5px;
-    font-size: 24px;
-    font-family: "Roboto";
-    color: rgb(0, 0, 0);
+    padding-bottom: 0px;
+    
+    font-size: 26px;
+    font-family: 'Roboto';
+    color: rgb(255, 255, 255);
 }
 .descripcion{
-    padding-left: 20px;
+    padding-left: 30px;
     padding-bottom: 0px;
     padding-top: 0%;
     margin-top: 0;
@@ -61,6 +65,7 @@
 
     
     font-size: 16px;
-    font-family: "Roboto";
-    color: rgb(49, 49, 49);
+    font-family: 'Roboto';
+    color: rgb(255, 255, 255);
+
 }
