--- a/src/Styles/Menu/card-enlace.css
+++ b/src/Styles/Menu/card-enlace.css
@@ -13,8 +13,8 @@
     background: #ffffff;
     
     display: flex;
-    justify-content: left;   
-    
+    justify-content: center;   
+
 }
 
 
@@ -25,7 +25,7 @@
 
     background-color: rgb(228, 4, 4);
 
-    height:140px;
+    height:130px;
     width: 250px;
 
     border-radius: 10px;
@@ -33,6 +33,8 @@
     display: flex;
     justify-content: center; 
     /*border: 1px solid #000000;*/
+    
+    border: 1px solid #000000;
 }
 
 .card-title
