--- a/src/Styles/Menu/card-materias.css
+++ b/src/Styles/Menu/card-materias.css
@@ -1,25 +1,26 @@
 .conetenedor-materias
 {
-    background-color: #f1f1f1;
-    height: 450px;
+    background-color: #ffffff;
+    height: 400px;
     width:100%;
 
     padding-top: 50px;
     padding-bottom: 0px;
-
+    padding-left: 20px;
     margin-bottom: 20px;
+
     display: flex;
-    justify-content: left;   
+    justify-content: center;   
 }
 
 .card{
     
-    width: 300px; /*ancho*/
-    height: 400px; /*alto*/
+    width: 250px; /*ancho*/
+    height: 350px; /*alto*/
 
     border-radius: 10px;
-
-    margin-left: 60px;
+    
+    margin-left: 20px;
     margin-top: 0px;
     margin-bottom: 10px;
     margin-right: 20px;
@@ -32,6 +33,8 @@
     border-color: rgb(131, 131, 131);
 
     transition: all 400ms ease;
+
+    
 }
 .card:hover
 {
@@ -52,20 +55,34 @@
     padding-top: 0px;
     padding-bottom: 0px;
     
-    font-size: 26px;
+    font-size: 22px;
     font-family: 'Roboto';
     color: rgb(255, 255, 255);
+    
+    
 }
-.descripcion{
+.descripcion
+{
     padding-left: 30px;
     padding-bottom: 0px;
     padding-top: 0%;
     margin-top: 0;
     margin-bottom: 0px;
 
-    
     font-size: 16px;
     font-family: 'Roboto';
     color: rgb(255, 255, 255);
 
+}
+
+.titulo-card h1 p
+{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+a:link, a:visited,  a:hover, a:active
+{
+    color: #000000;
+    text-decoration: none;
 }
