--- a/src/Styles/Menu/univalle-logo.css
+++ b/src/Styles/Menu/univalle-logo.css
@@ -2,23 +2,24 @@
 {
     height: 20%;
     display: flex;
-    justify-content: center;   
+    justify-content: left;   
     margin-left: 0px;
     padding-left: 0px;
     background-color: #2e2e2e;
 }
 .univalle-logo
 {
-
     margin-top: 20px;
-    margin-left: 60px;
-    padding-left: 10px;
+    margin-left:140px;
+    margin-right: 120px;
+    
+    padding-left: 0px;
 
 
     height:150px;
     width: 600px;
 
-    border: 1px solid #1f1c1c;
+    /*border: 1px solid #1f1c1c;*/
     
     display: flex;
     justify-content: left;  
@@ -47,7 +48,7 @@
     margin-left: 20px;
     padding-left: 10px;
 
-    border: 1px solid #1f1c1c;
+    /*border: 1px solid #1f1c1c;*/
 
     height: 30px;
     width: 300px;
@@ -67,38 +68,5 @@
     height: 30px;
     width: 300px;
 
-    border: 1px solid #1f1c1c;
-}
-
-/** Perfil de Usuario**/
-
-.univalle-cuenta
-{
-    margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 40px;
-    padding-right: 50px;
-    padding-top: 50px;
-    height:100px;
-    width: 500px;
-
-    border: 1px solid #1f1c1c;
-
-    display: flex;
-    justify-content: right;   
-}
-
-.univalle-cuenta h1
-{
-    color: aliceblue;
-    font-size: 22px;
-    font-family: 'Roboto';
-}
-
-.cuenta-icono
-{
-    padding-left: 20px;
-    height:50px;
-    width: 50px;
-    
+    /*border: 1px solid #1f1c1c;*/
 }
