--- a/src/Styles/Menu/card-enlace.css
+++ b/src/Styles/Menu/card-enlace.css
@@ -5,7 +5,7 @@
     margin: 0px;
 
     padding-top: 0%;
-    padding-left: 15px;
+    padding-left: 0px;
     
     width: 100%;
     height:250px;
@@ -24,8 +24,8 @@
     margin-left: 50px;
 
     background-color: rgb(228, 4, 4);
-
-    height:130px;
+    box-shadow: 0 4px 8px 0 rgba(88, 88, 88, 0.2), 0 6px 20px 0 rgba(119, 119, 119, 0.404);
+    height:120px; /*alto*/
     width: 250px;
 
     border-radius: 10px;
@@ -33,39 +33,53 @@
     display: flex;
     justify-content: center; 
     /*border: 1px solid #000000;*/
-    
-    border: 1px solid #000000;
+
+}
+
+.card-enlace:hover
+{
+    background-color: rgb(119, 0, 0);
+    box-shadow:2px 5px 4px 4px rgb(179, 179, 179);
+    transform: translateY(-2%);
 }
 
 .card-title
 {
+    margin-top: 40px;
     margin-left: 0px;
-    margin-top: 60px;
     margin-right: 20px;
 
 
-    padding-left: 10px;
+    padding-left: 0px;
 
     color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: 18px;
 
-    width: 100px;
-    height: 25px;
+    width: 120px;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
     /*border: 1px solid #1f1c1c;*/
 }
 
 .card-icono
 {
-    margin-top: 45px;
+    margin-top: 40px;
     margin-right: 0px;
     margin-left: 10px;
     height: 50px;
     width: 50px;
-    
+    font-size:40px;
 
     border-radius: 10px;
-
+    
+    color: aliceblue;
     /*border: 1px solid #1f1c1c;*/
+
+    display: flex;
+    justify-content: center;
+
 }
 
 
