--- a/src/Styles/Menu/univalle-perfil.css
+++ b/src/Styles/Menu/univalle-perfil.css
@@ -1,21 +1,24 @@
-/** Perfil de Usuario**/
-
 .univalle-perfil
 {
-    margin-top: 40px;
-    margin-left: 180px;
+    margin-top: 0px;
+    margin-left:60px;
     margin-right: 0px;
 
     padding-right: 0px;
-    padding-top: 0px;
+    padding-top: 50px;
 
 
-    height:50px;
-    width: 250px;
+    height:100px;
+    width: 500px;/*ancho*/
 
-    border: 1px 10px solid #1f1c1c;
     display: flex;
+    justify-content: right;
+
+    /*border: 1px 10px solid #0a0a0a;*/
+    /*background-color: red;*/
 }
+
+
 
 .fondo{
     
@@ -23,33 +26,38 @@
     border: 1px solid #000000;
     border-radius: 12px;
     height: 60px;
-    width: 360px;
+    width: 300px;
 
     padding-top: 0px;
-
     margin-top: 0px;
 
     display: flex;
-    justify-content: center ;
+    justify-content: center;
 
+}
+
+.fondo:hover
+{
+    background-color: rgb(255, 255, 255);
+    box-shadow:2px 2px 0px 0px rgb(0, 0, 0);
+    transform: translateY(8%);
 }
 
 .fondo h1
 {
     height:15px;
     width: 160px;
-
-
     text-align: left;
 
     color: rgb(7, 7, 7);
     font-size: 12px;
     font-family: 'Roboto';
-    /*border: 1px solid #000000;*/
 
     margin-top: 20px;
     margin-left: 0px;
     margin-right: 10px;
+
+    /*border: 1px solid #000000;*/
 
 }
 
