--- a/src/Styles/Menu/footer.css
+++ b/src/Styles/Menu/footer.css
@@ -1,9 +1,39 @@
 .footer{
     font-family: 'Roboto';
     color: rgb(255, 255, 255);
-
     background-color: rgb(36, 36, 36);
-
     height: 300px;
     width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.contenedor
+{
+    width: 100%;
+    
+}
+
+.redes
+{
+    height: 250px;
+    width: 50%;
+    border: 1px black solid;
+    background-color: green;
+
+    display: block;
+    justify-content: center;
+}
+
+.icono-redes{
+    height: 50px;
+    width: 50px;
+    font-size:40px;
+}
+
+.texto
+{
+    height: 250px;
+    width: 50%;
+    border: 1px black solid;
 }
