--- a/src/Styles/Usuario/botones-nav.css
+++ b/src/Styles/Usuario/botones-nav.css
@@ -5,14 +5,19 @@
     background-color: rgb(255, 255, 255);
     padding-top: 40px;
     padding-bottom: 20px;
+
     /*border: 1px solid #000000;*/
+
+    display: flex;
+    justify-content: space-between;
 }
 
 .boton
 {
 
     margin-left:130px;
-
+    margin-right:130px;
+    
     width: 110px;
     height: 50px;
     left: 180px;
